[package]
name = "api"
authors = ["Mikkel Mørk Hegnhøj <mikkel@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
spin-sdk = "3.1.0"

[workspace]
